# goods.io

./: Anchor.toml  Cargo.toml
backend/: .env  index.js  package-lock.json  package.json
backend/src/: index.js
backend/src/config/: db.js
backend/src/controllers/: authController.js  offerController.js  tradeController.js  userController.js
backend/src/models/: offerModel.js  tradeModel.js  userModel.js
backend/src/routes/: authRoutes.js  offerRoutes.js  tradeRoutes.js  userRoutes.js
backend/src/sockets/: socket.js
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: OnBoardModal.jsx
frontend/src/components/analytics/: MarketAnalytics.jsx
frontend/src/components/chat/: ChatSystem.jsx
frontend/src/components/coins/: Heroslider.jsx  Treandingsection.jsx
frontend/src/components/common/: AdvancedSearch.jsx
frontend/src/components/dashboard/: Dashboard.jsx
frontend/src/components/marketplace/: Catogoryslider.jsx  Newlaunch.jsx  Upcominglaunch.jsx
frontend/src/components/navbar/: Navbar.jsx  Sidebar.jsx
frontend/src/components/nfts/: CategorySlider.jsx  HeroSlider.jsx  NFTDisplay.jsx  (+2 more)
frontend/src/contexts/: UserContexts.jsx
frontend/src/pages/: Api.jsx  Blog.jsx  CoinLaunchpad.jsx  CoinMarketplace.jsx  Docs.jsx  HelpCenter.jsx  Home.jsx  Marketplace.jsx  NFTLaunchpad.jsx  NFTMarketplace.jsx  P2P.jsx  Profile.jsx  Wallet.jsx
frontend/src/services/: WalletConnect.jsx  api.js
programs/goods-marketplace/: Cargo.toml
programs/goods-marketplace/src/: lib.rs
(+11 files in other folders)
